fixed bug with z-index in the 'about' component

--- a/react-app/src/routes/About.module.css
+++ b/react-app/src/routes/About.module.css
@@ -4,7 +4,6 @@
   flex-wrap: nowrap;
   width: 99vw;
   align-items: center;
-  z-index: -10000;
 }
 
 .articles-content {
@@ -15,7 +14,6 @@
   padding: 1.5rem;
   max-width: 850px;
   border-radius: 10px;
-  z-index: -1000;
 }
 
 .articles-content p, .articles-content h2, .articles-content h3, .articles-content h4, .articles-content h5 {
